<resources>
    <string name="app_name">student-app-assignment</string>

    <string name="student_details_title">Student Details</string>
    <string name="create_student_title">Create Student</string>
    <string name="edit_student_title">Edit Student</string>
    <string name="student_list_title">Students List</string>

    <string name="student_image_description">Student image</string>
    <string name="student_address">Student Address</string>
    <string name="student_phone">Student Phone</string>
    <string name="checked">checked</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="student_name">Student Name</string>
    <string name="student_id">Student ID</string>
    <string name="edit_button">Edit</string>
</resources>