<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_student_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/studentImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/student_image_description"
        android:src="@drawable/student_img" />

    <EditText
        android:id="@+id/studentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/student_name" />

    <EditText
        android:id="@+id/studentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_id" />

    <EditText
        android:id="@+id/studentPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_phone" />

    <EditText
        android:id="@+id/studentAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_address" />

    <CheckBox
        android:id="@+id/studentCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checked" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/update_button" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/delete_button" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:text="@string/cancel_button" />
</LinearLayout>
